# cad_widgets

./: .gitignore  CLAUDE.md  README.md  example_modular.py  pyproject.toml  tasks.py
.github/workflows/: build-publish.yml  ci-actions.yml  release.yml  test-windows.yml
docs/: ARCHITECTURE.md
examples/: example_modular.py  full_featured_example.py  simple_example.py  simple_viewer_example.py
src/cad_widgets/: __init__.py  enums.py
src/cad_widgets/managers/: __init__.py  geometry_manager.py
src/cad_widgets/models/: __init__.py  shape_properties.py
src/cad_widgets/services/: __init__.py  geometry_service.py  selection_service.py  view_service.py
src/cad_widgets/utils/: __init__.py  shapes.py
src/cad_widgets/widgets/: __init__.py  enums.py  geometry_tree.py  ocp_widget.py  property_editor.py  selection_toolbar.py  view_toolbar.py
tests/: __init__.py  conftest.py  test_enums.py  test_geometry_manager.py  test_geometry_manager_integration.py  test_geometry_tree.py  test_import_export.py  test_integration.py  test_property_editor.py  test_shapes.py  test_toolbar.py  test_widget.py  test_windows_window.py
