[project]
name = "cad-widgets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pySide6 (>=6.6.0)",
    "cadquery-ocp (>=7.7.0)",
    "numpy (>=1.24.0)",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-datadir>=1.7.2,<2",
    "invoke>=2.2.0,<3",
    "ruff>=0.15.2",
]
