[project]
name = "cad-widgets"
version = "0.1.5"
description = "OpenCascade PySide6 3D CAD domain widgets with modular architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pySide6>=6.6.0",
    "cadquery-ocp>=7.7.0",
    "numpy>=1.24.0",
    "cadquery-ocp-stubs>=7.9.3.1",
]
authors = [
    { name = "Gustavo Martins", email = "gucmartins@gmail.com" }
]
keywords = ["cad", "opencascade", "pyside6", "3d", "viewer", "widget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/gcmartins/cad-widgets"
Repository = "https://github.com/gcmartins/cad-widgets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cad_widgets"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-datadir>=1.7.2,<2",
    "invoke>=2.2.0,<3",
    "ruff>=0.15.2",
    "pytest-cov>=7.0.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
mypy_path = "src"
packages = ["cad_widgets"]

# Ignore errors from libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "OCP.*",
    "PySide6.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.ruff.lint]
ignore = ["F401"]  # Ignore unused imports globally
